update user entity with roles